--- a/feuillet.css
+++ b/feuillet.css
@@ -1,45 +1,48 @@
+@charset "UTF-8";
 @font-face {
-  font-family: Material Icons;
+  font-family: "Material Icons";
   font-style: normal;
   font-weight: 400;
-  src: url("https://fonts.gstatic.com/s/materialicons/v140/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2") format("woff2");
+  src: url(https://fonts.gstatic.com/s/materialicons/v140/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2) format("woff2");
 }
-
 .material-icons {
+  font-family: "Material Icons";
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;
+  line-height: 1;
   letter-spacing: normal;
   text-transform: none;
+  display: inline-block;
   white-space: nowrap;
   word-wrap: normal;
   direction: ltr;
   -webkit-font-feature-settings: "liga";
   -webkit-font-smoothing: antialiased;
-  font-family: Material Icons;
-  font-size: 24px;
-  font-style: normal;
-  font-weight: normal;
-  line-height: 1;
-  display: inline-block;
 }
 
-*, :before, :after {
-  box-sizing: inherit;
+*,
+*::before,
+*::after {
   margin: 0;
   padding: 0;
+  box-sizing: inherit;
 }
 
 html {
   box-sizing: border-box;
-  font-family: Playfair Display, serif;
+  font-family: "Playfair Display", serif;
   font-size: 125%;
 }
 
 body {
   text-align: center;
+  background-image: url("images/bg.jpg");
   background-color: #eff;
-  background-image: url("bg.61005582.jpg");
 }
 
-p, li {
+p,
+li {
   text-align: justify;
   font-size: 1em;
 }
@@ -57,142 +60,131 @@ table.revenus {
   margin-block: 1rem;
   font-size: 125%;
 }
-
 table.revenus td {
   text-align: left;
   font-size: 1rem;
 }
-
 table.revenus td.fltop {
   text-align: right;
-  border-top: 2px solid #000;
-  border-left: 2px solid #000;
-  padding-right: .3rem;
+  padding-right: 0.3rem;
+  border-top: 2px solid black;
+  border-left: 2px solid black;
 }
-
 table.revenus td.fctop {
   text-align: right;
-  border-block: 2px solid #000;
-  padding-right: .3rem;
+  padding-right: 0.3rem;
+  border-block: 2px solid black;
 }
-
 table.revenus td.frtop {
   text-align: right;
-  border-top: 2px solid #000;
-  border-bottom: 2px solid #000;
-  border-right: 2px solid #000;
-  padding-right: .3rem;
+  padding-right: 0.3rem;
+  border-top: 2px solid black;
+  border-bottom: 2px solid black;
+  border-right: 2px solid black;
 }
-
 table.revenus td.flcen {
-  border-inline: 2px solid #000;
-  padding-left: .3rem;
+  padding-left: 0.3rem;
+  border-inline: 2px solid black;
 }
-
 table.revenus td.flbot {
-  border-inline: 2px solid #000;
-  border-bottom: 2px solid #000;
-  padding-left: .3rem;
+  padding-left: 0.3rem;
+  border-inline: 2px solid black;
+  border-bottom: 2px solid black;
 }
-
 table.revenus td.fdata {
   text-align: right;
-  padding-right: .3rem;
+  padding-right: 0.3rem;
 }
-
 table.revenus td.fdataneg {
   text-align: right;
-  color: red;
   padding-right: 0;
+  color: red;
 }
-
 table.revenus td.fdataneg:before {
   content: "(";
 }
-
 table.revenus td.fdataneg:after {
   content: ")";
 }
 
 sup {
   vertical-align: text-top;
-  font-size: .5em;
+  font-size: 0.5em;
 }
 
-div#page1, div#page2, div#page3 {
-  text-align: left;
-  background-color: #fff;
-  border: 1px solid #ccc;
-  width: 700px;
-  margin: 25px auto 75px;
-  padding: 10px;
+div#page1,
+div#page2,
+div#page3 {
   position: relative;
-  box-shadow: 4px 4px 6px 2px #000000b3;
+  margin: 25px auto 75px;
+  width: 700px;
+  text-align: left;
+  padding: 10px;
+  border: 1px solid #ccc;
+  background-color: white;
+  box-shadow: 4px 4px 6px 2px rgba(0, 0, 0, 0.7);
 }
 
 @media only screen and (orientation: portrait) {
-  #page1, #page2, #page3 {
+  #page1,
+  #page2,
+  #page3 {
     max-width: 97vw;
   }
 }
-
 #header {
   text-align: center;
-  font-family: Open Sans, sans-serif;
-  font-size: .75rem;
   font-weight: bold;
+  font-family: "Open Sans", sans-serif;
+  font-size: 0.75rem;
 }
 
 .carte {
-  background-color: #fff;
-  border: 2px solid #000;
-  margin-block: .5rem;
+  border: 2px solid black;
+  padding-inline: 0.5em;
   margin-inline: 3px;
-  padding-inline: .5em;
+  margin-block: 0.5rem;
+  background-color: white;
   font-size: 1rem;
 }
-
-.carte p, .carte table {
-  margin-block: .5rem;
+.carte p,
+.carte table {
+  margin-block: 0.5rem;
   font-size: 1rem;
 }
-
 .carte p.titre {
-  text-align: left;
-  font-family: Open Sans, sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-weight: bold;
+  text-align: left;
 }
 
 article {
-  background-color: #fff;
-  border: 2px solid #000;
-  margin-block: .5em;
+  border: 2px solid black;
+  padding-inline: 0.5em;
   margin-inline: 3px;
-  padding-inline: .5em;
+  margin-block: 0.5em;
+  background-color: white;
   font-size: 1em;
 }
-
-article p, article table {
-  margin-block: .5em;
+article p,
+article table {
+  margin-block: 0.5em;
   font-size: 1em;
 }
-
 article > titre {
   display: block;
 }
-
 article > titre, article h2 {
-  text-align: left;
-  padding-top: .5em;
-  font-family: Open Sans, sans-serif;
-  font-size: 1em;
+  font-family: "Open Sans", sans-serif;
   font-weight: bold;
+  font-size: 1em;
+  padding-top: 0.5em;
+  text-align: left;
 }
 
 a {
   text-decoration: none;
 }
-
 a:hover {
   text-decoration: underline;
 }
@@ -202,279 +194,243 @@ a:hover {
 }
 
 .citation {
-  border-block: 3px solid #000;
   margin: 5px 30px;
+  border-block: 3px solid black;
   padding: 6px 28px;
 }
-
 .citation p {
   text-align: center;
+  font: bold 1.3rem "Playfair Display", serif;
   margin: 0;
-  font: bold 1.3rem / 1.1 Playfair Display, serif;
+  line-height: 1.1;
 }
-
 .citation p.auteur {
   text-align: right;
-  font: 1em Playfair Display, serif;
+  font: normal 1em "Playfair Display", serif;
 }
 
 img#babillard {
-  z-index: 3;
   width: 279px;
   height: 57px;
   position: absolute;
   top: 5px;
   right: 5px;
+  z-index: 3;
 }
 
 #calctable {
-  border-collapse: collapse;
-  margin: .5rem;
-  background-color: #fff;
-  border: 2px solid #000;
-  width: 320px;
-  margin-bottom: .5rem;
-  padding: 5px;
-  line-height: 1;
   position: absolute;
   top: 10px;
   right: 5px;
+  margin: 0.5rem;
+  width: 320px;
+  border: 2px solid black;
+  padding: 5px;
+  line-height: 1;
+  background-color: #fff;
+  border-collapse: collapse;
+  margin-bottom: 0.5rem;
 }
-
 #calctable tbody {
   margin: 0;
-  padding-inline: .2rem;
+  padding-inline: 0.2rem;
 }
-
 #calctable img {
   float: left;
-  width: 66px;
-  height: 80px;
-  margin-left: 0;
+  margin-left: 0pt;
   margin-right: 4px;
+  height: 80px;
+  width: 66px;
 }
-
 #calctable td {
   background-color: #fff;
   padding-inline: 3px;
-  font-family: Open Sans;
+  font-family: "Open Sans";
   font-size: 1rem;
   font-stretch: condensed;
 }
-
 #calctable tr td:last-child {
   text-align: right;
   white-space: nowrap;
 }
-
 #calctable tr:first-child {
   font-weight: bold;
 }
-
 #calctable tr:first-child td:last-child {
   text-align: left;
   white-space: nowrap;
 }
 
 .agenda {
+  margin-block: 10px;
+  width: 100%;
   border-collapse: collapse;
   table-layout: fixed;
   clear: both;
-  width: 100%;
-  margin-block: 10px;
   font-size: 1rem;
 }
-
 .agenda tbody {
-  font-size: .8em;
+  font-size: 0.8em;
 }
-
 .agenda table {
   border-collapse: collapse;
 }
-
 .agenda td {
+  font-family: "Open Sans";
+  font-size: 0.9em;
   background-color: #fff;
   padding: 0;
-  font-family: Open Sans;
-  font-size: .9em;
 }
-
 .agenda td.date {
-  text-align: center;
-  color: #fff;
-  vertical-align: middle;
-  background-color: #336;
-  border-top: 1px solid #fff;
-  font-family: Arial Rounded Mt Bold, Arial, sans-serif;
-  font-size: .9rem;
+  font-family: "Arial Rounded Mt Bold", Arial, sans-serif;
   font-weight: bold;
+  font-size: 0.9rem;
+  text-align: center;
+  color: white;
+  background-color: #336;
+  border-top: 1px solid white;
+  vertical-align: middle;
 }
-
 .agenda td.heure {
   text-align: right;
   font-weight: bold;
 }
-
 .agenda td.modif {
   color: red;
 }
-
 .agenda td.modif span {
-  border: 2px solid #000;
+  border: 2px solid black;
   margin: 1px;
-  color: #000 !important;
+  color: black !important;
 }
-
 .agenda td.intentions {
-  padding-left: .5em;
-  font-size: .9rem;
+  padding-left: 0.5em;
+  font-size: 0.9rem;
 }
-
 .agenda tr {
   vertical-align: middle;
 }
-
 .agenda table {
   margin: 0;
   font-size: 1.2rem;
 }
-
 .agenda table td {
   vertical-align: top;
 }
-
 .agenda table td.messe {
   white-space: nowrap;
   padding-right: 5px;
 }
-
 .agenda table td .itpar {
-  letter-spacing: -.05em;
   font-style: italic;
+  letter-spacing: -0.05em;
 }
-
-.agenda table td .itpar:before {
+.agenda table td .itpar::before {
   content: " – ";
 }
-
 .agenda table td .addendum {
-  letter-spacing: -.05em;
+  letter-spacing: -0.05em;
 }
-
-.agenda table td .addendum:before {
+.agenda table td .addendum::before {
   content: "        (";
 }
-
-.agenda table td .addendum:after {
+.agenda table td .addendum::after {
   content: ")";
 }
-
 .agenda table td .addendum-1 {
-  letter-spacing: -.05em;
+  letter-spacing: -0.05em;
 }
-
-.agenda table td .addendum-1:before {
+.agenda table td .addendum-1::before {
   content: " (";
 }
-
-.agenda table td .addendum-1:after {
+.agenda table td .addendum-1::after {
   content: ")";
 }
-
 .agenda table td .addendum-sq {
-  border: 1px solid #000;
-  margin-left: 4ch;
+  border: 1px solid black;
   padding-inline: 3px;
   display: inline-block;
+  margin-left: 4ch;
 }
 
 .data {
+  font-size: 1rem;
   border-bottom: 1px solid #336;
   border-right: 1px solid #336;
-  font-size: 1rem;
 }
-
 .data table {
   width: 100%;
 }
-
 .data table td:first-child {
   width: 10%;
 }
-
 .data table td:last-child {
   width: 90%;
 }
-
 .data table table {
-  padding: 0;
+  padding: 0px;
 }
 
 .agendaHead {
-  border-top: 0 solid #fff;
-  border-bottom: 1px solid #336;
-  border-right: 0 solid #fff;
-  margin: 0;
-  padding: 0;
   font-weight: bold;
+  margin: 0px;
+  padding: 0px;
+  border-top: 0px solid white;
+  border-right: 0px solid white;
+  border-bottom: 1px solid #336;
 }
-
 .agendaHead span {
-  color: #fff;
+  border-top-right-radius: 1.5em;
+  background-color: #336;
+  margin: 0 0 1px 0;
+  padding: 0.2em 1em 0em 0.5em;
+  color: white;
+  font-weight: 900;
+  font-size: 1.2em;
+  font-family: "Open Sans";
   text-transform: uppercase;
   text-align: left;
-  letter-spacing: .15em;
+  letter-spacing: 0.15em;
   float: left;
-  background-color: #336;
-  border-top-right-radius: 1.5em;
-  margin: 0 0 1px;
-  padding: .2em 1em 0 .5em;
-  font-family: Open Sans;
-  font-size: 1.2em;
-  font-weight: 900;
 }
 
 fieldset.svqbox {
+  border: 2px solid black;
+  padding: 0px 10px;
   text-align: justify;
-  border: 2px solid #000;
-  margin-block: .5rem;
-  padding: 0 10px;
+  margin-block: 0.5rem;
 }
-
 fieldset.svqbox p:first-of-type {
-  margin-top: .5rem;
+  margin-top: 0.5rem;
   padding-top: 0;
 }
-
 fieldset.svqbox legend {
-  margin: 0;
-  padding-inline: .2rem;
-  font-family: Open Sans, sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-size: 1.1rem;
   font-weight: bold;
-  background-color: #fff !important;
+  margin: 0;
+  padding-inline: 0.2rem;
+  background-color: white !important;
 }
 
 .ombre-texte {
-  text-shadow: 3px 3px #aaa;
-  color: #000;
+  text-shadow: 3px 3px 0 #aaa;
+  margin: 1rem;
+  margin-bottom: 2rem;
+  color: black;
   text-align: center;
-  margin: 1rem 1rem 2rem;
   font-size: 2rem;
-  font-style: normal;
   font-weight: bold;
+  font-style: normal;
 }
 
 a[href^="mailto:"] {
   text-decoration: none;
 }
-
-a[href^="mailto:"]:before {
+a[href^="mailto:"]::before {
   content: "✉ ";
   font-style: normal;
 }
-
 a[href^="mailto:"]:hover {
   color: red;
 }
@@ -482,26 +438,22 @@ a[href^="mailto:"]:hover {
 a[href^="tel:"] {
   text-decoration: none;
 }
-
-a[href^="tel:"]:before {
+a[href^="tel:"]::before {
   content: "✆ ";
   font-style: normal;
 }
-
 a[href^="tel:"]:hover {
   color: red;
 }
 
-a[href^="http"] {
+a[href^=http] {
   text-decoration: none;
 }
-
-a[href^="http"]:before {
+a[href^=http]::before {
   content: "🖳 ";
   font-style: normal;
 }
-
-a[href^="http"]:hover {
+a[href^=http]:hover {
   color: red;
 }
 
@@ -538,7 +490,7 @@ a[href^="http"]:hover {
 }
 
 .petit {
-  font-size: .9rem !important;
+  font-size: 0.9rem !important;
 }
 
 .rouge {
@@ -549,18 +501,17 @@ a[href^="http"]:hover {
   font-size: 1.2rem !important;
 }
 
-@media (width <= 640px) {
+@media (max-width: 640px) {
   #page1, #page2, #page3 {
     margin-inline: 5px;
   }
 }
-
 .border-black {
-  border-color: #000 !important;
+  border-color: black !important;
 }
 
 .border-white {
-  border-color: #fff !important;
+  border-color: white !important;
 }
 
 .border-gray {
@@ -572,7 +523,7 @@ a[href^="http"]:hover {
 }
 
 .border-blue {
-  border-color: #00f !important;
+  border-color: blue !important;
 }
 
 .border-green {
@@ -580,11 +531,11 @@ a[href^="http"]:hover {
 }
 
 .border-cyan {
-  border-color: #0ff !important;
+  border-color: cyan !important;
 }
 
 .border-yellow {
-  border-color: #ff0 !important;
+  border-color: yellow !important;
 }
 
 .border-orange {
@@ -592,11 +543,11 @@ a[href^="http"]:hover {
 }
 
 .bg-black {
-  background-color: #000 !important;
+  background-color: black !important;
 }
 
 .bg-white {
-  background-color: #fff !important;
+  background-color: white !important;
 }
 
 .bg-gray {
@@ -608,7 +559,7 @@ a[href^="http"]:hover {
 }
 
 .bg-blue {
-  background-color: #00f !important;
+  background-color: blue !important;
 }
 
 .bg-green {
@@ -616,11 +567,11 @@ a[href^="http"]:hover {
 }
 
 .bg-cyan {
-  background-color: #0ff !important;
+  background-color: cyan !important;
 }
 
 .bg-yellow {
-  background-color: #ff0 !important;
+  background-color: yellow !important;
 }
 
 .bg-orange {
@@ -700,7 +651,7 @@ a[href^="http"]:hover {
 }
 
 .mt-05 {
-  margin-top: .5rem !important;
+  margin-top: 0.5rem !important;
 }
 
 .mt-1 {
@@ -874,17 +825,14 @@ a[href^="http"]:hover {
 .w-75 {
   width: 75% !important;
 }
-
 .w-auto {
   width: auto !important;
 }
-
 .w-full {
   width: 100% !important;
 }
 
 .fit {
-  width: -moz-fit-content !important;
   width: fit-content !important;
 }
 
@@ -909,14 +857,15 @@ a[href^="http"]:hover {
 }
 
 .h-fit {
-  height: -moz-fit-content !important;
   height: fit-content !important;
 }
 
-.float, .float-left {
+.float {
   float: left !important;
 }
-
+.float-left {
+  float: left !important;
+}
 .float-right {
   float: right !important;
 }
@@ -924,11 +873,9 @@ a[href^="http"]:hover {
 .clear {
   clear: both !important;
 }
-
 .clear-left {
   clear: left !important;
 }
-
 .clear-right {
   clear: right !important;
 }
@@ -936,19 +883,15 @@ a[href^="http"]:hover {
 .fnt-b {
   font-weight: bold !important;
 }
-
 .fnt-sb {
   font-weight: semibold !important;
 }
-
 .fnt-xb {
   font-weight: 900 !important;
 }
-
 .fnt-i {
   font-style: italic !important;
 }
-
 .fnt-u {
   text-decoration: underline !important;
 }
@@ -974,15 +917,15 @@ a[href^="http"]:hover {
 }
 
 .fs-09 {
-  font-size: .9rem !important;
+  font-size: 0.9rem !important;
 }
 
 .fs-08 {
-  font-size: .8rem !important;
+  font-size: 0.8rem !important;
 }
 
 .fs-07 {
-  font-size: .7rem !important;
+  font-size: 0.7rem !important;
 }
 
 .text-justify {
@@ -1016,82 +959,66 @@ a[href^="http"]:hover {
 .red {
   color: red !important;
 }
-
 .red-darker {
-  color: #c00 !important;
+  color: #cc0000 !important;
 }
 
 .flex {
   display: flex !important;
 }
-
 .flex-top {
   align-items: top !important;
 }
-
 .flex-middle {
   align-items: center !important;
 }
-
 .flex-bottom {
   align-items: bottom !important;
 }
-
 .flex-left {
   justify-content: left !important;
 }
-
 .flex-center {
   justify-content: center !important;
 }
-
 .flex-right {
   justify-content: right !important;
 }
-
 .flex-wrap {
   flex-wrap: wrap !important;
 }
-
 .flex-row {
   flex-direction: row !important;
 }
-
 .flex-column {
   flex-direction: column !important;
 }
 
 .deces {
-  border-collapse: collapse;
   width: 100%;
   padding: 0;
+  border-collapse: collapse;
 }
-
 .deces td {
+  margin: 0em;
+  padding: 0em 0.3em 0em 0em;
   clear: both;
   text-align: left;
-  margin: 0;
-  padding: 0 .3em 0 0;
+  font-size: 0.8em;
   font-family: sans;
-  font-size: .8em;
 }
-
 .deces td span {
   float: right;
 }
-
 .deces td b {
   font-weight: 900;
 }
-
 .deces td:last-child {
   text-align: right;
   vertical-align: bottom;
   white-space: nowrap;
-  padding-right: 0;
+  padding-right: 0em;
 }
-
-.deces td:last-child:after {
+.deces td:last-child::after {
   content: " ans";
 }
-
