--- a/feuillet.css
+++ b/feuillet.css
@@ -37,7 +37,7 @@ html {
 
 body {
   text-align: center;
-  background-image: url("images/bg.jpg");
+  background-image: url("assets/bg.jpg");
   background-color: #eff;
 }
 
