--- a/feuillet2.css
+++ b/feuillet2.css
@@ -62,25 +62,21 @@ table.revenus {
   margin-block: 1rem;
   font-size: 125%;
 }
-
 table.revenus td {
   text-align: left;
   font-size: 1rem;
 }
-
 table.revenus td.fltop {
   text-align: right;
   padding-right: 0.3rem;
   border-top: 2px solid black;
   border-left: 2px solid black;
 }
-
 table.revenus td.fctop {
   text-align: right;
   padding-right: 0.3rem;
   border-block: 2px solid black;
 }
-
 table.revenus td.frtop {
   text-align: right;
   padding-right: 0.3rem;
@@ -88,33 +84,27 @@ table.revenus td.frtop {
   border-bottom: 2px solid black;
   border-right: 2px solid black;
 }
-
 table.revenus td.flcen {
   padding-left: 0.3rem;
   border-inline: 2px solid black;
 }
-
 table.revenus td.flbot {
   padding-left: 0.3rem;
   border-inline: 2px solid black;
   border-bottom: 2px solid black;
 }
-
 table.revenus td.fdata {
   text-align: right;
   padding-right: 0.3rem;
 }
-
 table.revenus td.fdataneg {
   text-align: right;
   padding-right: 0;
   color: red;
 }
-
 table.revenus td.fdataneg:before {
   content: "(";
 }
-
 table.revenus td.fdataneg:after {
   content: ")";
 }
@@ -159,13 +149,11 @@ div#page3 {
   background-color: white;
   font-size: 1rem;
 }
-
 .carte p,
 .carte table {
   margin-block: 0.5rem;
   font-size: 1rem;
 }
-
 .carte p.titre {
   font-family: "Open Sans", sans-serif;
   font-weight: bold;
@@ -180,17 +168,14 @@ article {
   background-color: white;
   font-size: 1em;
 }
-
 article p,
 article table {
   margin-block: 0.5em;
   font-size: 1em;
 }
-
 article > titre {
   display: block;
 }
-
 article > titre, article h2 {
   font-family: "Open Sans", sans-serif;
   font-weight: bold;
@@ -202,7 +187,6 @@ article > titre, article h2 {
 a {
   text-decoration: none;
 }
-
 a:hover {
   text-decoration: underline;
 }
@@ -216,14 +200,12 @@ a:hover {
   border-block: 3px solid black;
   padding: 6px 28px;
 }
-
 .citation p {
   text-align: center;
   font: bold 1.3rem "Playfair Display", serif;
   margin: 0;
   line-height: 1.1;
 }
-
 .citation p.auteur {
   text-align: right;
   font: normal 1em "Playfair Display", serif;
@@ -251,12 +233,10 @@ img#babillard {
   border-collapse: collapse;
   margin-bottom: 0.5rem;
 }
-
 #calctable tbody {
   margin: 0;
   padding-inline: 0.2rem;
 }
-
 #calctable img {
   float: left;
   margin-left: 0pt;
@@ -264,7 +244,6 @@ img#babillard {
   height: 80px;
   width: 66px;
 }
-
 #calctable td {
   background-color: #fff;
   padding-inline: 3px;
@@ -272,16 +251,13 @@ img#babillard {
   font-size: 1rem;
   font-stretch: condensed;
 }
-
 #calctable tr td:last-child {
   text-align: right;
   white-space: nowrap;
 }
-
 #calctable tr:first-child {
   font-weight: bold;
 }
-
 #calctable tr:first-child td:last-child {
   text-align: left;
   white-space: nowrap;
@@ -295,22 +271,18 @@ img#babillard {
   clear: both;
   font-size: 1rem;
 }
-
 .agenda tbody {
   font-size: 0.8em;
 }
-
 .agenda table {
   border-collapse: collapse;
 }
-
 .agenda td {
   font-family: "Open Sans";
   font-size: 0.9em;
   background-color: #fff;
   padding: 0;
 }
-
 .agenda td.date {
   font-family: "Arial Rounded Mt Bold", Arial, sans-serif;
   font-weight: bold;
@@ -321,78 +293,61 @@ img#babillard {
   border-top: 1px solid white;
   vertical-align: middle;
 }
-
 .agenda td.heure {
   text-align: right;
   font-weight: bold;
 }
-
 .agenda td.modif {
   color: red;
 }
-
 .agenda td.modif span {
   border: 2px solid black;
   margin: 1px;
   color: black !important;
 }
-
 .agenda td.intentions {
   padding-left: 0.5em;
   font-size: 0.9rem;
 }
-
 .agenda tr {
   vertical-align: middle;
 }
-
 .agenda table {
   margin: 0;
   font-size: 1.2rem;
 }
-
 .agenda table td {
   vertical-align: top;
 }
-
 .agenda table td.messe {
   white-space: nowrap;
   padding-right: 5px;
 }
-
 .agenda table td .itpar {
   font-style: italic;
   letter-spacing: -0.05em;
 }
-
 .agenda table td .itpar::before {
   content: " – ";
 }
-
 .agenda table td .addendum {
   letter-spacing: -0.05em;
 }
-
 .agenda table td .addendum::before {
   content: "        (";
 }
-
 .agenda table td .addendum::after {
   content: ")";
 }
-
 .agenda table td .addendum-1 {
   letter-spacing: -0.05em;
 }
-
 .agenda table td .addendum-1::before {
   content: " (";
 }
-
 .agenda table td .addendum-1::after {
   content: ")";
 }
-
 .agenda table td .addendum-sq {
   border: 1px solid black;
   padding-inline: 3px;
@@ -405,19 +360,15 @@ img#babillard {
   border-bottom: 1px solid #336;
   border-right: 1px solid #336;
 }
-
 .data table {
   width: 100%;
 }
-
 .data table td:first-child {
   width: 10%;
 }
-
 .data table td:last-child {
   width: 90%;
 }
-
 .data table table {
   padding: 0px;
 }
@@ -430,7 +381,6 @@ img#babillard {
   border-right: 0px solid white;
   border-bottom: 1px solid #336;
 }
-
 .agendaHead span {
   border-top-right-radius: 1.5em;
   background-color: #336;
@@ -452,12 +402,10 @@ fieldset.svqbox {
   text-align: justify;
   margin-block: 0.5rem;
 }
-
 fieldset.svqbox p:first-of-type {
   margin-top: 0.5rem;
   padding-top: 0;
 }
-
 fieldset.svqbox legend {
   font-family: "Open Sans", sans-serif;
   font-size: 1.1rem;
@@ -481,12 +429,10 @@ fieldset.svqbox legend {
 a[href^="mailto:"] {
   text-decoration: none;
 }
-
 a[href^="mailto:"]::before {
   content: "✉ ";
   font-style: normal;
 }
-
 a[href^="mailto:"]:hover {
   color: red;
 }
@@ -494,12 +440,10 @@ a[href^="mailto:"]:hover {
 a[href^="tel:"] {
   text-decoration: none;
 }
-
 a[href^="tel:"]::before {
   content: "✆ ";
   font-style: normal;
 }
-
 a[href^="tel:"]:hover {
   color: red;
 }
@@ -507,12 +451,10 @@ a[href^="tel:"]:hover {
 a[href^=http] {
   text-decoration: none;
 }
-
 a[href^=http]::before {
   content: "🖳 ";
   font-style: normal;
 }
-
 a[href^=http]:hover {
   color: red;
 }
@@ -885,11 +827,9 @@ a[href^=http]:hover {
 .w-75 {
   width: 75% !important;
 }
-
 .w-auto {
   width: auto !important;
 }
-
 .w-full {
   width: 100% !important;
 }
@@ -925,11 +865,9 @@ a[href^=http]:hover {
 .float {
   float: left !important;
 }
-
 .float-left {
   float: left !important;
 }
-
 .float-right {
   float: right !important;
 }
@@ -937,11 +875,9 @@ a[href^=http]:hover {
 .clear {
   clear: both !important;
 }
-
 .clear-left {
   clear: left !important;
 }
-
 .clear-right {
   clear: right !important;
 }
@@ -949,19 +885,15 @@ a[href^=http]:hover {
 .fnt-b {
   font-weight: bold !important;
 }
-
 .fnt-sb {
   font-weight: semibold !important;
 }
-
 .fnt-xb {
   font-weight: 900 !important;
 }
-
 .fnt-i {
   font-style: italic !important;
 }
-
 .fnt-u {
   text-decoration: underline !important;
 }
@@ -1029,7 +961,6 @@ a[href^=http]:hover {
 .red {
   color: red !important;
 }
-
 .red-darker {
   color: #cc0000 !important;
 }
@@ -1037,41 +968,91 @@ a[href^=http]:hover {
 .flex {
   display: flex !important;
 }
-
 .flex-top {
   align-items: top !important;
 }
-
 .flex-middle {
   align-items: center !important;
 }
-
 .flex-bottom {
   align-items: bottom !important;
 }
-
 .flex-left {
   justify-content: left !important;
 }
-
 .flex-center {
   justify-content: center !important;
 }
-
 .flex-right {
   justify-content: right !important;
 }
-
 .flex-wrap {
   flex-wrap: wrap !important;
 }
-
 .flex-row {
   flex-direction: row !important;
 }
-
 .flex-column {
   flex-direction: column !important;
+}
+
+.horaire {
+  width: 600px;
+  display: grid;
+  grid-template-rows: auto;
+  margin-inline: auto;
+  margin-top: 2rem;
+}
+.horaire__jour {
+  display: grid;
+  grid-template-columns: 7ch 1fr;
+  align-items: center;
+  border-bottom: 1px solid black;
+  border-right: 1px solid black;
+}
+.horaire__date {
+  align-content: right;
+  height: 100%;
+  text-align: center;
+  color: white;
+  background-color: black;
+  border-bottom: 1px solid white;
+  border-top: 1px solid white;
+  padding-block: 4px;
+  font-family: Arial Rounded Mt Bold, Arial, sans-serif;
+  font-weight: bold;
+  font-size: 13pt;
+}
+.horaire__messe {
+  display: grid;
+  grid-template-columns: 7ch 1fr;
+  font-family: Arial, sans-serif;
+  font-size: 13pt;
+}
+.horaire__heure {
+  padding-right: 10px;
+  text-align: right;
+  font-weight: bold;
+}
+.horaire__heure + div {
+  text-indent: -30px;
+  padding-left: 30px;
+}
+
+.gras {
+  font-weight: bold;
+}
+
+.italique {
+  font-style: italic;
+}
+
+.sq {
+  display: inline-block;
+  padding-inline: 4px;
+  border: 1px solid black;
+  font-size: 0.9em;
+  text-indent: 0;
 }
 
 .deces {
@@ -1079,7 +1060,6 @@ a[href^=http]:hover {
   padding: 0;
   border-collapse: collapse;
 }
-
 .deces td {
   margin: 0em;
   padding: 0em 0.3em 0em 0em;
@@ -1088,22 +1068,18 @@ a[href^=http]:hover {
   font-size: 0.8em;
   font-family: sans;
 }
-
 .deces td span {
   float: right;
 }
-
 .deces td b {
   font-weight: 900;
 }
-
 .deces td:last-child {
   text-align: right;
   vertical-align: bottom;
   white-space: nowrap;
   padding-right: 0em;
 }
-
 .deces td:last-child::after {
   content: " ans";
 }
