--- a/App.css
+++ b/App.css
@@ -1919,6 +1919,538 @@ h6 {
   border-color: #e7ffff !important;
 }
 
+.border-black {
+  border-color: black !important;
+}
+
+.border-white {
+  border-color: white !important;
+}
+
+.border-gray {
+  border-color: gray !important;
+}
+
+.border-red {
+  border-color: red !important;
+}
+
+.border-blue {
+  border-color: blue !important;
+}
+
+.border-green {
+  border-color: green !important;
+}
+
+.border-cyan {
+  border-color: cyan !important;
+}
+
+.border-yellow {
+  border-color: yellow !important;
+}
+
+.border-orange {
+  border-color: orange !important;
+}
+
+.bg-black {
+  background-color: black !important;
+}
+
+.bg-white {
+  background-color: white !important;
+}
+
+.bg-gray {
+  background-color: gray !important;
+}
+
+.bg-red {
+  background-color: red !important;
+}
+
+.bg-blue {
+  background-color: blue !important;
+}
+
+.bg-green {
+  background-color: green !important;
+}
+
+.bg-cyan {
+  background-color: cyan !important;
+}
+
+.bg-yellow {
+  background-color: yellow !important;
+}
+
+.bg-orange {
+  background-color: orange !important;
+}
+
+.border-radius-3 {
+  border-radius: 3px !important;
+}
+
+.border-radius-5 {
+  border-radius: 5px !important;
+}
+
+.border-radius-7 {
+  border-radius: 7px !important;
+}
+
+.border-1 {
+  border-width: 1px !important;
+}
+
+.border-2 {
+  border-width: 2px !important;
+}
+
+.border-3 {
+  border-width: 3px !important;
+}
+
+.mg-1 {
+  margin: 1rem !important;
+}
+
+.mg-2 {
+  margin: 2rem !important;
+}
+
+.mg-3 {
+  margin: 3rem !important;
+}
+
+.mx-1 {
+  margin-inline: 1rem !important;
+}
+
+.mx-2 {
+  margin-inline: 2rem !important;
+}
+
+.mx-3 {
+  margin-inline: 3rem !important;
+}
+
+.mx-4 {
+  margin-inline: 4rem !important;
+}
+
+.mx-5 {
+  margin-inline: 5rem !important;
+}
+
+.mx-auto {
+  margin-inline: auto !important;
+}
+
+.my-1 {
+  margin-block: 1rem !important;
+}
+
+.my-2 {
+  margin-block: 2rem !important;
+}
+
+.my-3 {
+  margin-block: 3rem !important;
+}
+
+.my-4 {
+  margin-block: 4rem !important;
+}
+
+.my-5 {
+  margin-block: 5rem !important;
+}
+
+.mt-05 {
+  margin-top: 0.5rem !important;
+}
+
+.mt-1 {
+  margin-top: 1rem !important;
+}
+
+.mt-2 {
+  margin-top: 2rem !important;
+}
+
+.mt-3 {
+  margin-top: 3rem !important;
+}
+
+.mt-4 {
+  margin-top: 4rem !important;
+}
+
+.mt-5 {
+  margin-top: 5rem !important;
+}
+
+.mb-1 {
+  margin-bottom: 1rem !important;
+}
+
+.mb-2 {
+  margin-bottom: 2rem !important;
+}
+
+.mb-3 {
+  margin-bottom: 3rem !important;
+}
+
+.mb-4 {
+  margin-bottom: 4rem !important;
+}
+
+.mb-5 {
+  margin-bottom: 5rem !important;
+}
+
+.ml-1 {
+  margin-left: 1rem !important;
+}
+
+.ml-2 {
+  margin-left: 2rem !important;
+}
+
+.ml-3 {
+  margin-left: 3rem !important;
+}
+
+.ml-4 {
+  margin-left: 4rem !important;
+}
+
+.ml-5 {
+  margin-left: 5rem !important;
+}
+
+.mr-1 {
+  margin-right: 1rem !important;
+}
+
+.mr-2 {
+  margin-right: 2rem !important;
+}
+
+.mr-3 {
+  margin-right: 3rem !important;
+}
+
+.mr-4 {
+  margin-right: 4rem !important;
+}
+
+.mr-5 {
+  margin-right: 5rem !important;
+}
+
+.pd-1 {
+  padding: 1rem !important;
+}
+
+.pd-2 {
+  padding: 2rem !important;
+}
+
+.pd-3 {
+  padding: 3rem !important;
+}
+
+.px-1 {
+  padding-inline: 1rem !important;
+}
+
+.px-2 {
+  padding-inline: 2rem !important;
+}
+
+.px-3 {
+  padding-inline: 3rem !important;
+}
+
+.py-1 {
+  padding-block: 1rem !important;
+}
+
+.py-2 {
+  padding-block: 2rem !important;
+}
+
+.py-3 {
+  padding-block: 3rem !important;
+}
+
+.pt-1 {
+  padding-top: 1rem !important;
+}
+
+.pt-2 {
+  padding-top: 2rem !important;
+}
+
+.pt-3 {
+  padding-top: 3rem !important;
+}
+
+.pb-1 {
+  padding-bottom: 1rem !important;
+}
+
+.pb-2 {
+  padding-bottom: 2rem !important;
+}
+
+.pb-3 {
+  padding-bottom: 3rem !important;
+}
+
+.pl-1 {
+  padding-left: 1rem !important;
+}
+
+.pl-2 {
+  padding-left: 2rem !important;
+}
+
+.pl-3 {
+  padding-left: 3rem !important;
+}
+
+.pr-1 {
+  padding-right: 1rem !important;
+}
+
+.pr-2 {
+  padding-right: 2rem !important;
+}
+
+.pr-3 {
+  padding-right: 3rem !important;
+}
+
+.w-50 {
+  width: 50% !important;
+}
+
+.w-60 {
+  width: 60% !important;
+}
+
+.w-70 {
+  width: 70% !important;
+}
+
+.w-80 {
+  width: 80% !important;
+}
+
+.w-90 {
+  width: 90% !important;
+}
+
+.w-75 {
+  width: 75% !important;
+}
+
+.w-auto {
+  width: auto !important;
+}
+
+.w-full {
+  width: 100% !important;
+}
+
+.fit {
+  width: fit-content !important;
+}
+
+.h-50 {
+  height: 50% !important;
+}
+
+.h-60 {
+  height: 60% !important;
+}
+
+.h-70 {
+  height: 70% !important;
+}
+
+.h-80 {
+  height: 80% !important;
+}
+
+.h-90 {
+  height: 90% !important;
+}
+
+.h-fit {
+  height: fit-content !important;
+}
+
+.float {
+  float: left !important;
+}
+
+.float-left {
+  float: left !important;
+}
+
+.float-right {
+  float: right !important;
+}
+
+.clear {
+  clear: both !important;
+}
+
+.clear-left {
+  clear: left !important;
+}
+
+.clear-right {
+  clear: right !important;
+}
+
+.fnt-b {
+  font-weight: bold !important;
+}
+
+.fnt-sb {
+  font-weight: semibold !important;
+}
+
+.fnt-xb {
+  font-weight: 900 !important;
+}
+
+.fnt-i {
+  font-style: italic !important;
+}
+
+.fnt-u {
+  text-decoration: underline !important;
+}
+
+.deco-none {
+  text-decoration: none !important;
+}
+
+.fs-20 {
+  font-size: 2rem !important;
+}
+
+.fs-15 {
+  font-size: 1.5rem !important;
+}
+
+.fs-12 {
+  font-size: 1.2rem !important;
+}
+
+.fs-normal {
+  font-size: 1rem !important;
+}
+
+.fs-09 {
+  font-size: 0.9rem !important;
+}
+
+.fs-08 {
+  font-size: 0.8rem !important;
+}
+
+.fs-07 {
+  font-size: 0.7rem !important;
+}
+
+.text-justify {
+  text-align: justify !important;
+}
+
+.text-center {
+  text-align: center !important;
+}
+
+.text-right {
+  text-align: right !important;
+}
+
+.text-left {
+  text-align: left !important;
+}
+
+.va-top {
+  vertical-align: top !important;
+}
+
+.va-bottom {
+  vertical-align: bottom !important;
+}
+
+.va-middle {
+  vertical-align: middle !important;
+}
+
+.red {
+  color: red !important;
+}
+
+.red-darker {
+  color: #cc0000 !important;
+}
+
+.flex {
+  display: flex !important;
+}
+
+.flex-top {
+  align-items: top !important;
+}
+
+.flex-middle {
+  align-items: center !important;
+}
+
+.flex-bottom {
+  align-items: bottom !important;
+}
+
+.flex-left {
+  justify-content: left !important;
+}
+
+.flex-center {
+  justify-content: center !important;
+}
+
+.flex-right {
+  justify-content: right !important;
+}
+
+.flex-wrap {
+  flex-wrap: wrap !important;
+}
+
+.flex-row {
+  flex-direction: row !important;
+}
+
+.flex-column {
+  flex-direction: column !important;
+}
+
 body {
   font-size: 1.2rem !important;
   background-attachment: fixed;
