nouvel arrière-plan

--- a/App.css
+++ b/App.css
@@ -2457,7 +2457,7 @@ body {
 
 @media screen and (min-width: 768px) {
   body {
-    background-image: url("assets/bg2024.jpg");
+    background-image: url("assets/bg2024-bis.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-attachment: fixed;
